// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OperationsTableRow does not render non-action children 1`] = `
<div
  className="dataset-row p-3 border-bottom"
>
  <div
    className="col-md-12"
  >
    <div
      className="dataset-row-title h4"
    >
      My Test Dataset
       
    </div>
    <div
      className="mb-2"
    >
       
    </div>
    <div
      className="dataset-row-actions mb-1"
    >
       
    </div>
    <div
      className="h6 dataset-row-footer"
    >
      Updated
       
      9 months ago
       by 
      <span>
         
         
      </span>
      from 
      <span
        className="text-uppercase text-danger"
      >
        
      </span>
    </div>
  </div>
</div>
`;

exports[`OperationsTableRow renders actions when provided 1`] = `
<div
  className="dataset-row p-3 border-bottom"
>
  <div
    className="col-md-12"
  >
    <div
      className="dataset-row-title h4"
    >
      My Test Dataset
       
    </div>
    <div
      className="mb-2"
    >
       
    </div>
    <div
      className="dataset-row-actions mb-1"
    >
       
      <button
        type="button"
      >
        Click Me
      </button>
    </div>
    <div
      className="h6 dataset-row-footer"
    >
      Updated
       
      9 months ago
       by 
      <span>
         
         
      </span>
      from 
      <span
        className="text-uppercase text-danger"
      >
        
      </span>
    </div>
  </div>
</div>
`;

exports[`OperationsTableRow renders correctly with the default props 1`] = `
<div
  className="dataset-row p-3 border-bottom"
>
  <div
    className="col-md-12"
  >
    <div
      className="dataset-row-title h4"
    >
      My Test Dataset
       
    </div>
    <div
      className="mb-2"
    >
       
    </div>
    <div
      className="dataset-row-actions mb-1"
    >
       
    </div>
    <div
      className="h6 dataset-row-footer"
    >
      Updated
       
      9 months ago
       by 
      <span>
         
         
      </span>
      from 
      <span
        className="text-uppercase text-danger"
      >
        
      </span>
    </div>
  </div>
</div>
`;
